Fix flex spacing

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -28,7 +28,5 @@
     flex-wrap: wrap;
     align-items: flex-start;
     justify-content: center;
-
-    height: 100%;
   }
 }
